--- a/web/main.css
+++ b/web/main.css
@@ -82,14 +82,21 @@ tr:hover {
 /* content section */
 #content {
   position: relative;
-  height: 250px; 
+  height: 410px; 
 }
-#rest-url-input {
+.rest-input {
+  margin: 10px;
+  padding: 3px;
   width: 950px;
-  height: 40px;
   background-color: rgb(250, 250, 250);
   border: medium none;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+#rest-url-wrapper {
+  height: 40px;
+}
+#rest-body-wrapper {
+  height: 230px;
 }
 #rest-url {
   margin-top: 5px;
@@ -106,6 +113,10 @@ tr:hover {
    height: 150px; 
    background-image: url('loading.gif');
    background-position: 0px -100px;
+}
+#testRestBodyBtn {
+  background-color:  rgb(30, 144, 255);
+  color: #fff;
 }
 /* result section */
 #result-container {
@@ -132,10 +143,7 @@ tr:hover {
   margin: 0 auto;
   width: 900px;
 }
-#displayAll, #add, #search, #delete, #recover, #mongoDBbtn {
-  background-color:  rgb(30, 144, 255);
-  color: #fff;
-}
+
 #add {
 	margin-right:30px;
 }
