--- a/web/main.css
+++ b/web/main.css
@@ -114,11 +114,15 @@ tr:hover {
    background-image: url('loading.gif');
    background-position: 0px -100px;
 }
-#testRestBodyBtn {
+#testRestBodyBtn, #testAuthenticationBtn {
+  padding: 3px;
   background-color:  rgb(30, 144, 255);
   color: #fff;
 }
 /* result section */
+#result {
+  margin-top: 30px;
+}
 #result-container {
   margin: 0 auto;
   margin-bottom: 20px;
